output/shared/include/turing_api_wasm.h

void _core_turinger_game_object__send_message(uint64_t opaqu, const char* method_name, int32_t options);
Component _core_turinger_game_object__get_component_in_parent_by_type(uint64_t opaqu, Type cs_type, bool include_inactive);
bool _core_turinger_game_object__is_static_get(uint64_t opaqu);
TuringerTransform _core_turinger_game_object__transform_get(uint64_t opaqu);
Component _core_turinger_game_object__get_component_in_children_by_type(uint64_t opaqu, Type cs_type, bool include_inactive);
void _core_turinger_game_object__active_set(uint64_t opaqu, bool value);
void _core_turinger_game_object__broadcast_message(uint64_t opaqu, const char* method_name, int32_t options);
GameObject _core_turinger_game_object__game_object_get(uint64_t opaqu);
void _core_turinger_game_object__is_static_set(uint64_t opaqu, bool value);
Component _core_turinger_game_object__add_component(uint64_t opaqu, Type component_type);
void _core_turinger_game_object__hide_flags_set(uint64_t opaqu, int32_t value);
void _core_turinger_game_object__send_message_upwards(uint64_t opaqu, const char* method_name, int32_t options);
bool _core_turinger_game_object__compare_tag(uint64_t opaqu, const char* tag);
int32_t _core_turinger_game_object__hide_flags_get(uint64_t opaqu);
void _core_turinger_game_object__tag_set(uint64_t opaqu, const char* value);
int32_t _core_turinger_game_object__get_instance_id(uint64_t opaqu);
int32_t _core_turinger_game_object__layer_get(uint64_t opaqu);
void _core_turinger_game_object__layer_set(uint64_t opaqu, int32_t value);
void _core_turinger_game_object__set_active_recursively(uint64_t opaqu, bool state);
int32_t _core_turinger_game_object__get_component_index(uint64_t opaqu, Component component);
int32_t _core_turinger_game_object__get_component_count(uint64_t opaqu);
Component _core_turinger_game_object__get_component_at_index(uint64_t opaqu, int32_t index);
uint32_t _core_turinger_game_object__tag_get(uint64_t opaqu);
bool _core_turinger_game_object__active_self_get(uint64_t opaqu);
uint32_t _core_turinger_game_object__name_get(uint64_t opaqu);
Component _core_turinger_game_object__get_component_by_type(uint64_t opaqu, Type cs_type);
bool _core_turinger_game_object__active_in_hierarchy_get(uint64_t opaqu);
void _core_turinger_game_object__set_active(uint64_t opaqu, bool value);
bool _core_turinger_game_object__active_get(uint64_t opaqu);
Component _core_turinger_game_object__get_component_by_name(uint64_t opaqu, const char* cs_type);
void _core_turinger_game_object__name_set(uint64_t opaqu, const char* value);
uint64_t _core_turinger_game_object__scene_culling_mask_get(uint64_t opaqu);
TuringerGameObject _core_turinger_game_object_manager__create_object(const char* name);
TuringerGameObject _core_turinger_game_object_manager__find(const char* name);
void _core_turinger_game_object_manager__destroy_object(TuringerGameObject listener);
TuringerGameObjectManager _core_turinger_game_object_manager__instance_get(uint64_t opaqu);
void _core_note_manager__add_obstacle(float beat, float duration, int32_t line, int32_t layer, int32_t width, int32_t height, CustomData custom_data);
void _core_note_manager__add_color_note(float beat, int32_t line, int32_t layer, int32_t color, int32_t cut_direction, CustomData custom_data);
float _core_note_manager__time_to_beat(float time);
void _core_note_manager__add_bomb_note(float beat, int32_t line, int32_t layer, CustomData custom_data);
Component _core_turinger_transform__get_component_by_type(uint64_t opaqu, Type cs_type);
int32_t _core_turinger_transform__get_instance_id(uint64_t opaqu);
uint32_t _core_turinger_transform__local_euler_angles_get(uint64_t opaqu);
int32_t _core_turinger_transform__hierarchy_count_get(uint64_t opaqu);
void _core_turinger_transform__detach_children(uint64_t opaqu);
uint32_t _core_turinger_transform__inverse_transform_point(uint64_t opaqu, uint32_t position);
Component _core_turinger_transform__get_component_in_children_by_type(uint64_t opaqu, Type t, bool include_inactive);
IEnumerator _core_turinger_transform__get_enumerator(uint64_t opaqu);
int32_t _core_turinger_transform__child_count_get(uint64_t opaqu);
TuringerTransform _core_turinger_transform__get_child(uint64_t opaqu, int32_t index);
void _core_turinger_transform__has_changed_set(uint64_t opaqu, bool value);
TuringerTransform _core_turinger_transform__find_child(uint64_t opaqu, const char* n);
bool _core_turinger_transform__has_changed_get(uint64_t opaqu);
uint32_t _core_turinger_transform__local_position_get(uint64_t opaqu);
void _core_turinger_transform__local_euler_angles_set(uint64_t opaqu, uint32_t value);
uint32_t _core_turinger_transform__forward_get(uint64_t opaqu);
int32_t _core_turinger_transform__get_sibling_index(uint64_t opaqu);
Component _core_turinger_transform__get_component_in_parent_by_type(uint64_t opaqu, Type t, bool include_inactive);
int32_t _core_turinger_transform__get_component_index(uint64_t opaqu);
void _core_turinger_transform__broadcast_message(uint64_t opaqu, const char* method_name, Object parameter, int32_t options);
void _core_turinger_transform__euler_angles_set(uint64_t opaqu, uint32_t value);
Component _core_turinger_transform__get_component_by_name(uint64_t opaqu, const char* cs_type);
void _core_turinger_transform__hierarchy_capacity_set(uint64_t opaqu, int32_t value);
uint32_t _core_turinger_transform__inverse_transform_direction(uint64_t opaqu, uint32_t direction);
uint32_t _core_turinger_transform__euler_angles_get(uint64_t opaqu);
bool _core_turinger_transform__is_child_of(uint64_t opaqu, TuringerTransform parent);
int32_t _core_turinger_transform__get_child_count(uint64_t opaqu);
int32_t _core_turinger_transform__hide_flags_get(uint64_t opaqu);
TuringerGameObject _core_turinger_transform__game_object_get(uint64_t opaqu);
int32_t _core_turinger_transform__hierarchy_capacity_get(uint64_t opaqu);
void _core_turinger_transform__forward_set(uint64_t opaqu, uint32_t value);
bool _core_turinger_transform__compare_tag(uint64_t opaqu, const char* tag);
void _core_turinger_transform__hide_flags_set(uint64_t opaqu, int32_t value);
TuringerTransform _core_turinger_transform__find(uint64_t opaqu, const char* n);
uint32_t _core_turinger_transform__inverse_transform_vector(uint64_t opaqu, uint32_t vector);