output/zig/core-zig/src/core.zig

extern "C" fn _core_note_jump__note_time_get(handle: NoteJump) f32;
extern "C" fn _core_note_jump__remove_note_jump_did_finish_event(handle: NoteJump, value: Action) void;
extern "C" fn _core_note_jump__remove_note_jump_did_pass_half_event(handle: NoteJump, value: Action) void;
extern "C" fn _core_note_jump__remove_note_jump_did_pass_missed_marker_event(handle: NoteJump, value: Action) void;
extern "C" fn _core_note_jump__remove_note_jump_did_pass_three_quarters_event(handle: NoteJump, value: Action1) void;
extern "C" fn _core_note_jump__remove_note_jump_did_start_event(handle: NoteJump, value: Action) void;
extern "C" fn _core_note_jump__remove_note_jump_did_update_progress_event(handle: NoteJump, value: Action1) void;
extern "C" fn _core_note_manager__add_bomb_note(beat: f32, line: i32, layer: i32, custom_data: CustomData) CustomNoteData;
extern "C" fn _core_note_manager__add_color_note(beat: f32, line: i32, layer: i32, color: i32, cut_direction: i32, custom_data: CustomData) CustomNoteData;
extern "C" fn _core_note_manager__add_obstacle(beat: f32, duration: f32, line: i32, layer: i32, width: i32, height: i32, custom_data: CustomData) CustomObstacleData;
extern "C" fn _core_note_manager__get_note_controller(n: i32) NoteControllerBase;
extern "C" fn _core_note_manager__get_note_controller_from_custom(n: CustomNoteData) NoteControllerBase;
extern "C" fn _core_note_manager__get_nth_event(id: i32) CustomEventData;
extern "C" fn _core_note_manager__get_nth_note(id: i32) CustomNoteData;
extern "C" fn _core_note_manager__get_nth_object(id: i32) BeatmapDataItem;
extern "C" fn _core_note_manager__get_nth_obstacle(id: i32) CustomObstacleData;
extern "C" fn _core_note_manager__get_obstacle_controller(n: i32) ObstacleControllerBase;
extern "C" fn _core_note_manager__get_obstacle_controller_from_custom(n: CustomObstacleData) ObstacleController;
extern "C" fn _core_note_manager__time_to_beat(time: f32) f32;
extern "C" fn _core_task_scheduler__schedule(task: Action) void;
extern "C" fn _core_task_scheduler__dispose(handle: TaskScheduler) void;
extern "C" fn _core_turing_mesh___mesh_get(handle: TuringMesh) Mesh;
extern "C" fn _core_turing_mesh___mesh_set(handle: TuringMesh, value: Mesh) void;
extern "C" fn _core_turing_mesh__clear(handle: TuringMesh) void;
extern "C" fn _core_turing_mesh__get_bounds_max_x(handle: TuringMesh) f32;
extern "C" fn _core_turing_mesh__get_bounds_max_y(handle: TuringMesh) f32;
extern "C" fn _core_turing_mesh__get_bounds_max_z(handle: TuringMesh) f32;
extern "C" fn _core_turing_mesh__get_bounds_min_x(handle: TuringMesh) f32;
extern "C" fn _core_turing_mesh__get_bounds_min_y(handle: TuringMesh) f32;
extern "C" fn _core_turing_mesh__get_bounds_min_z(handle: TuringMesh) f32;
extern "C" fn _core_turing_mesh__get_instance_id(handle: TuringMesh) i32;
extern "C" fn _core_turing_mesh__get_u_vs(handle: TuringMesh, channel: i32) u32;
extern "C" fn _core_turing_mesh__get_vertices(handle: TuringMesh) u32;
extern "C" fn _core_turing_mesh__hide_flags_get(handle: TuringMesh) void;
extern "C" fn _core_turing_mesh__hide_flags_set(handle: TuringMesh) void;
extern "C" fn _core_turing_mesh__mark_modified(handle: TuringMesh) void;
extern "C" fn _core_turing_mesh__name_get(handle: TuringMesh) u32;
extern "C" fn _core_turing_mesh__name_set(handle: TuringMesh, value: [*c]const u8) void;
extern "C" fn _core_turing_mesh__optimize(handle: TuringMesh) void;
extern "C" fn _core_turing_mesh__optimize_index_buffers(handle: TuringMesh) void;
extern "C" fn _core_turing_mesh__recalculate_bounds(handle: TuringMesh) void;
extern "C" fn _core_turing_mesh__recalculate_normals(handle: TuringMesh) void;
extern "C" fn _core_turing_mesh__recalculate_tangents(handle: TuringMesh) void;
extern "C" fn _core_turing_mesh__set_bounds(handle: TuringMesh, min_x: f32, min_y: f32, min_z: f32, max_x: f32, max_y: f32, max_z: f32) void;
extern "C" fn _core_turing_mesh__set_triangles(handle: TuringMesh, triangles: Int32, submesh: i32, calculate_bounds: bool, base_vertex: i32) void;
extern "C" fn _core_turing_mesh__set_u_vs(handle: TuringMesh, channel: i32, uvs: *const anyopaque) void;
extern "C" fn _core_turing_mesh__set_vertices(handle: TuringMesh, in_vertices: *const anyopaque) void;
extern "C" fn _core_turing_mesh__upload_mesh_data(handle: TuringMesh, mark_no_longer_readable: bool) void;
extern "C" fn _core_turinger_game_object__active_get(handle: TuringerGameObject) bool;
extern "C" fn _core_turinger_game_object__active_in_hierarchy_get(handle: TuringerGameObject) bool;
extern "C" fn _core_turinger_game_object__active_self_get(handle: TuringerGameObject) bool;
extern "C" fn _core_turinger_game_object__active_set(handle: TuringerGameObject, value: bool) void;
extern "C" fn _core_turinger_game_object__add_component(handle: TuringerGameObject, component_type: Type) Component;
extern "C" fn _core_turinger_game_object__add_or_get_mesh(handle: TuringerGameObject) TuringMesh;
extern "C" fn _core_turinger_game_object__broadcast_message(handle: TuringerGameObject, method_name: [*c]const u8, options: i32) void;
extern "C" fn _core_turinger_game_object__compare_tag(handle: TuringerGameObject, tag: [*c]const u8) bool;
extern "C" fn _core_turinger_game_object__game_object_get(handle: TuringerGameObject) GameObject;
extern "C" fn _core_turinger_game_object__get_component_at_index(handle: TuringerGameObject, index: i32) Component;
extern "C" fn _core_turinger_game_object__get_component_by_name(handle: TuringerGameObject, cs_type: [*c]const u8) Component;
extern "C" fn _core_turinger_game_object__get_component_by_type(handle: TuringerGameObject, cs_type: Type) Component;
extern "C" fn _core_turinger_game_object__get_component_count(handle: TuringerGameObject) i32;
extern "C" fn _core_turinger_game_object__get_component_in_children_by_type(handle: TuringerGameObject, cs_type: Type, include_inactive: bool) Component;
extern "C" fn _core_turinger_game_object__get_component_in_parent_by_type(handle: TuringerGameObject, cs_type: Type, include_inactive: bool) Component;
extern "C" fn _core_turinger_game_object__get_component_index(handle: TuringerGameObject, component: Component) i32;
extern "C" fn _core_turinger_game_object__get_instance_id(handle: TuringerGameObject) i32;
extern "C" fn _core_turinger_game_object__hide_flags_get(handle: TuringerGameObject) i32;
extern "C" fn _core_turinger_game_object__hide_flags_set(handle: TuringerGameObject, value: i32) void;
extern "C" fn _core_turinger_game_object__is_static_get(handle: TuringerGameObject) bool;
extern "C" fn _core_turinger_game_object__is_static_set(handle: TuringerGameObject, value: bool) void;
extern "C" fn _core_turinger_game_object__layer_get(handle: TuringerGameObject) i32;
extern "C" fn _core_turinger_game_object__layer_set(handle: TuringerGameObject, value: i32) void;
extern "C" fn _core_turinger_game_object__name_get(handle: TuringerGameObject) u32;
extern "C" fn _core_turinger_game_object__name_set(handle: TuringerGameObject, value: [*c]const u8) void;
extern "C" fn _core_turinger_game_object__scene_culling_mask_get(handle: TuringerGameObject) u64;
extern "C" fn _core_turinger_game_object__send_message(handle: TuringerGameObject, method_name: [*c]const u8, options: i32) void;
extern "C" fn _core_turinger_game_object__send_message_upwards(handle: TuringerGameObject, method_name: [*c]const u8, options: i32) void;
extern "C" fn _core_turinger_game_object__set_active(handle: TuringerGameObject, value: bool) void;
extern "C" fn _core_turinger_game_object__set_active_recursively(handle: TuringerGameObject, state: bool) void;
extern "C" fn _core_turinger_game_object__tag_get(handle: TuringerGameObject) u32;
extern "C" fn _core_turinger_game_object__tag_set(handle: TuringerGameObject, value: [*c]const u8) void;
extern "C" fn _core_turinger_game_object__transform_get(handle: TuringerGameObject) TuringerTransform;
extern "C" fn _core_turinger_game_object_manager__create_object(name: [*c]const u8) TuringerGameObject;
extern "C" fn _core_turinger_game_object_manager__destroy_object(listener: TuringerGameObject) void;
extern "C" fn _core_turinger_game_object_manager__find(name: [*c]const u8) TuringerGameObject;
extern "C" fn _core_turinger_game_object_manager__instance_get(handle: TuringerGameObjectManager) TuringerGameObjectManager;
extern "C" fn _core_turinger_transform__broadcast_message(handle: TuringerTransform, method_name: [*c]const u8, parameter: Object, options: i32) void;
extern "C" fn _core_turinger_transform__child_count_get(handle: TuringerTransform) i32;
extern "C" fn _core_turinger_transform__compare_tag(handle: TuringerTransform, tag: [*c]const u8) bool;
extern "C" fn _core_turinger_transform__detach_children(handle: TuringerTransform) void;
extern "C" fn _core_turinger_transform__euler_angles_get(handle: TuringerTransform) u32;
extern "C" fn _core_turinger_transform__euler_angles_set(handle: TuringerTransform, value: u32) void;
extern "C" fn _core_turinger_transform__find(handle: TuringerTransform, n: [*c]const u8) TuringerTransform;
extern "C" fn _core_turinger_transform__find_child(handle: TuringerTransform, n: [*c]const u8) TuringerTransform;
extern "C" fn _core_turinger_transform__forward_get(handle: TuringerTransform) u32;
extern "C" fn _core_turinger_transform__forward_set(handle: TuringerTransform, value: u32) void;
extern "C" fn _core_turinger_transform__game_object_get(handle: TuringerTransform) TuringerGameObject;
extern "C" fn _core_turinger_transform__get_child(handle: TuringerTransform, index: i32) TuringerTransform;
extern "C" fn _core_turinger_transform__get_child_count(handle: TuringerTransform) i32;
extern "C" fn _core_turinger_transform__get_component_by_name(handle: TuringerTransform, cs_type: [*c]const u8) Component;
extern "C" fn _core_turinger_transform__get_component_by_type(handle: TuringerTransform, cs_type: Type) Component;
extern "C" fn _core_turinger_transform__get_component_in_children_by_type(handle: TuringerTransform, t: Type, include_inactive: bool) Component;
extern "C" fn _core_turinger_transform__get_component_in_parent_by_type(handle: TuringerTransform, t: Type, include_inactive: bool) Component;
extern "C" fn _core_turinger_transform__get_component_index(handle: TuringerTransform) i32;
extern "C" fn _core_turinger_transform__get_enumerator(handle: TuringerTransform) IEnumerator;
extern "C" fn _core_turinger_transform__get_instance_id(handle: TuringerTransform) i32;
extern "C" fn _core_turinger_transform__get_sibling_index(handle: TuringerTransform) i32;
extern "C" fn _core_turinger_transform__has_changed_get(handle: TuringerTransform) bool;
extern "C" fn _core_turinger_transform__has_changed_set(handle: TuringerTransform, value: bool) void;
extern "C" fn _core_turinger_transform__hide_flags_get(handle: TuringerTransform) i32;
extern "C" fn _core_turinger_transform__hide_flags_set(handle: TuringerTransform, value: i32) void;
extern "C" fn _core_turinger_transform__hierarchy_capacity_get(handle: TuringerTransform) i32;
extern "C" fn _core_turinger_transform__hierarchy_capacity_set(handle: TuringerTransform, value: i32) void;
extern "C" fn _core_turinger_transform__hierarchy_count_get(handle: TuringerTransform) i32;
extern "C" fn _core_turinger_transform__inverse_transform_direction(handle: TuringerTransform, direction: u32) u32;
extern "C" fn _core_turinger_transform__inverse_transform_point(handle: TuringerTransform, position: u32) u32;
extern "C" fn _core_turinger_transform__inverse_transform_vector(handle: TuringerTransform, vector: u32) u32;
extern "C" fn _core_turinger_transform__is_child_of(handle: TuringerTransform, parent: TuringerTransform) bool;
extern "C" fn _core_turinger_transform__local_euler_angles_get(handle: TuringerTransform) u32;
extern "C" fn _core_turinger_transform__local_euler_angles_set(handle: TuringerTransform, value: u32) void;
extern "C" fn _core_turinger_transform__local_position_get(handle: TuringerTransform) u32;
